@@ -1,0 +1,3 @@
+DIR=$(dirname $0)
+
+$DIR/spyking-circus ${HOME}
